1999-08-13  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents.c (gdk_event_translate): Fix a couple of bugs
	in the key event handling: Now AltGr chars work again. Also,
	now Alt-digits are passed up as well as Control-digits.
	Pass keypad plus and minus as normal plus and minus.

Wed Aug 11 13:38:26 BST 1999 Tony Gale  <gale@gtk.org>

        * docs/gtkfaq.sgml: FAQ Update

1999-07-25  Tor Lillqvist  <tml@iki.fi>

	* README.win32
	* config.h.win32: Add HAVE_WINTAB. Undefine it if bulding without
 	the Wintab SDK.

	* gdk/win32/gdkinput.c: Hack some more. Still doesn't quite work
 	OK, but getting closer. Guard against bogus tilt data from Wacom
 	ArtPad II with the 3.40 driver. Add ifdefs for HAVE_WINTAB to
 	enable easier building without Wintab.

	* gdk/win32/gdkinput.h
	* gdk/win32/gdkevents.c	
	* gdk/win32/gdkwindow.c: Minor changes related related to above.
	
	* gdk/win32/gdkvisual.c: Simplify a lot, remove leftovers from X11
 	code. As we have just one visual on Win32, no sense to have it in a
 	table, and no need for the hash table.

	* gdk/win32/rc/cursor*.cur: Edit some of the cursors a bit to look
 	better on white background.

1999-07-21  Tor Lillqvist  <tml@iki.fi>

	* README.win32: Update gcc build instructions. Mention gettext is
 	GPL.

	* gdk/win32/gdkcursor.c (gdk_cursor_new_from_pixmap): Get correct
 	supported cursor size with GetSystemMetrics.

	* gdk/win32/gdkfont.c
	* gtk/gtkfontsel.c: Guard against some font weight and charset
 	symbols being undefined (in mingw32 headers).

	* gdk/win32/makefile.cygwin
	* gtk/makefile.cygwin
	* gtk/gtkthemes.c: No longer need to have differently named
	gcc-built DLLs when using gcc-2.95 and -fnative-struct.

hu Jul 15 13:33:15 BST 1999 Tony Gale <gale@gtk.org>

	* docs/gtkfaq.sgml: Long awaited FAQ update.

1999-07-15  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkcursor.c (gdk_cursor_new_from_pixmap): Implement
 	it. Obscure bit manipulation needed.

	* gdk/win32/gdkevents.c: Logging.
	